envoy/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/without-custom-metrics"
                route:
                  cluster: web_service
              - match:
                  prefix: "/with-custom-metrics"
                route:
                  cluster: web_service
                metadata:
                  filter_metadata: 
                    custom-metric-tag:
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "http-metrics"
                root_id: "http-metrics"
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  allow_precompiled: true
                  code:
                    local:
                      filename: "/etc/http_metrics.wasm"
          - name:  envoy.filters.http.router
  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web_service
                port_value: 5678
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
